--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "0.1.0",
 	"dependencies": {
 		"@grpc/proto-loader": "^0.5.3",
+		"@sisense/local-licensing-service": "^2.0.3",
 		"@types/google-protobuf": "^3.2.7",
 		"async": "^3.2.0",
 		"google-protobuf": "^3.0.0",
