--- a/tsconfig.json
+++ b/tsconfig.json
@@ -48,7 +48,8 @@
 		"rootDirs": [
 			"dynamic",
 			"static",
-			"generated"
+			"generated",
+			"@types"
 		] /* List of root folders whose combined content represents the structure of the project at runtime. */
 		// "typeRoots": [ ],                       /* List of folders to include type definitions from. */
 		// "types": [],                           /* Type declaration files to be included in compilation. */
@@ -68,5 +69,5 @@
 		// "emitDecoratorMetadata": true,         /* Enables experimental support for emitting type metadata for decorators. */
 	},
 	"exclude": ["node_modules"],
-	"include": ["static/*", "generated/*", "dynamic/*"]
+	"include": ["static/*", "generated/*", "dynamic/*", "@types"]
 }
